--- a/home.html
+++ b/home.html
@@ -22,8 +22,14 @@
       z-index: 10;
     }
 
-    .navbar__menu { list-style: none; margin: 0; padding: 0; }
-    .navbar__item { margin-bottom: 1rem; }
+    .navbar__menu { 
+      list-style: none; margin: 0; padding: 0; 
+    }
+
+    .navbar__item { 
+      margin-bottom: 1rem; 
+    }
+
     .navbar__link {
       display: flex;
       align-items: center;
@@ -34,6 +40,7 @@
       text-decoration: none;
       transition: 0.25s ease all;
     }
+
     .navbar__link span {
       position: absolute;
       left: 100%;
@@ -48,20 +55,35 @@
       transition: 0.25s ease all;
       white-space: nowrap;
     }
+
     .navbar__link:hover { 
-      background: darkblue; color: black; transform: scale(1.1); border-radius: 10px; font-weight: bold; 
+      background: darkblue; 
+      color: black; 
+      transform: scale(1.1); 
+      border-radius: 10px; 
+      font-weight: bold; 
     }
 
     .navbar__link:hover span { 
-      opacity: 1; transform: translate(0); color: white; background-color: blue; 
+      opacity: 1; 
+      transform: translate(0); 
+      color: white; 
+      background-color: blue; 
     }
 
     .navbar__link.active { 
-      background: #1e3a8a; color: white; 
+      background: #1e3a8a; 
+      color: white; 
     }
 
     .video-bg {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;
+      position: fixed; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      height: 100%; 
+      object-fit: cover; 
+      z-index: -1;
     }
 
     .content {
